# GBD.Audio.SoxSharp.Soxbuild

./: .gitignore  README.md  nuget.config
docs/: Build Process.md  Build Tools.md  Building LibSox Dll.md  LibNotes.md  New Build Process.md  Old Build Process.md  Swig Notes.md
docs/Patches/: Lame.md  LibPng.md  Libsox.md  Overview.md  ZLib.md
docs/Patches/Future/: Flac.md  LibMad.md  Libsndfile.md
src/lame-3.99.5/modifiedsrc/libmp3lame/: CMakeLists.txt  config.h
src/libpng-1.6.18/patches/: libpng-1.6.18-1.patch
src/sox-14.4.2/: swig-win.bat
src/sox-14.4.2/cmake/: soxconfig.h.cmake
src/sox-14.4.2/modifiedsrc/libgsm/: CMakeLists.txt
src/sox-14.4.2/modifiedsrc/lpc10/: CMakeLists.txt
src/sox-14.4.2/modifiedsrc/src/: CMakeLists.txt
src/sox-14.4.2/patches/: libsox-14.4.2-1.patch  swig.patch  zlib-1.2.8-1.patch
src/sox-14.4.2/swig-win/: swig.i
x_bin/: CMakeGenerate.bat  CMakeGenerate.sh  SwigGenerate.bat  SwigGenerate.sh
x_bin/scripts/: DownloadSrcs.cs  Paths.cs  SwigGenerate.cs  packages.config
x_bin/scripts/Lib/: XmlSerial.cs
x_bin/scripts/Testing/: ScriptTesting.sln
x_bin/scripts/Testing/CMakeGenerate/: CMakeGenerate.csproj
x_bin/scripts/Testing/DownloadSrcs/: DownloadSrcs.csproj  Program.cs  packages.config
x_bin/scripts/Testing/SwigGenerate/: NLog.config  SwigGenerate.csproj
